--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,7 @@
 <template>
   <require from="./shell/nav-bar.html"></require>
 
-  <nav-bar router.bind="router">
-    <webmidi-access type="inputs"></webmidi-access>
-  </nav-bar>
+  <nav-bar router.bind="router"></nav-bar>
 
   <main role="main">
     <router-view></router-view>
