Add Material Design Lite

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <meta name="application-name" content="Synthia">
   <link rel="manifest" href="manifest.json">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body aurelia-app="main">
