--- a/src/resources/features/tone/tone-amplitude-envelope.html
+++ b/src/resources/features/tone/tone-amplitude-envelope.html
@@ -1,29 +1,21 @@
 <template>
-  <label for="envelope-attack">Attack</label>
+  <label for="">Attack</label>
 
-  <input type="range" id="envelope-attack" min="0" max="1" step="0.001" value.bind="attack"
-    aria-label="Attack">
-  <input type="number" min="0" max="1" step="0.001" value.bind="attack"
-    aria-hidden="true">
+  <mdl-slider id="" min="0" max="1" step="0.001" value.two-way="attack"></mdl-slider>
+  <mdl-textfield type="number" min="0" max="1" step="0.001" value.two-way="attack" label="Attack"></mdl-textfield>
 
-  <label for="envelope-decay">Decay</label>
+  <label for="">Decay</label>
 
-  <input type="range" id="envelope-decay" min="0" max="1" step="0.001" value.bind="decay"
-    aria-label="Decay">
-  <input type="number" min="0" max="1" step="0.001" value.bind="decay"
-    aria-hidden="true">
+  <mdl-slider id="" min="0" max="1" step="0.001" value.two-way="decay"></mdl-slider>
+  <mdl-textfield type="number" min="0" max="1" step="0.001" value.two-way="decay" label="Decay"></mdl-textfield>
 
-  <label for="envelope-sustain">Sustain</label>
+  <label for="">Sustain</label>
 
-  <input type="range" id="envelope-sustain" min="0" max="1" step="0.001" value.bind="sustain"
-    aria-label="Sustain">
-  <input type="number" min="0" max="1" step="0.001" value.bind="sustain"
-    aria-hidden="true">
+  <mdl-slider id="" min="0" max="1" step="0.001" value.two-way="sustain"></mdl-slider>
+  <mdl-textfield type="number" min="0" max="1" step="0.001" value.two-way="sustain" label="Sustain"></mdl-textfield>
 
-  <label for="envelope-release">Release</label>
+  <label for="">Release</label>
 
-  <input type="range" id="envelope-release" min="0" max="1" step="0.001" value.bind="release"
-    aria-label="Release">
-  <input type="number" min="0" max="1" step="0.001" value.bind="release"
-    aria-hidden="true">
+  <mdl-slider id="" min="0" max="1" step="0.001" value.two-way="release"></mdl-slider>
+  <mdl-textfield type="number" min="0" max="1" step="0.001" value.two-way="release" label="Release"></mdl-textfield>
 </template>
