Use only one feature

--- a/src/resources/mdl/mdl-layout.html
+++ b/src/resources/mdl/mdl-layout.html
@@ -1,5 +1,6 @@
 <template>
   <require from="material-design-lite/material.css"></require>
+  <require from="./mdl-js"></require>
 
   <div class="mdl-layout mdl-js-layout" mdl-js>
     <slot></slot>
