--- a/src/resources/mdl/mdl-textfield.html
+++ b/src/resources/mdl/mdl-textfield.html
@@ -1,5 +1,6 @@
 <template>
   <require from="material-design-lite/material.css"></require>
+  <require from="./mdl-js"></require>
 
   <div class="mdl-textfield mdl-js-textfield" mdl-js>
     <input id="" class="mdl-textfield__input" type.one-time="type" min.one-time="min" max.one-time="min" step.one-time="step" value.two-way="value">
