--- a/src/resources/mdl/mdl-slider.html
+++ b/src/resources/mdl/mdl-slider.html
@@ -1,5 +1,6 @@
 <template>
   <require from="material-design-lite/material.css"></require>
+  <require from="./mdl-js"></require>
 
   <input class="mdl-slider mdl-js-slider" type="range"
     min.one-time="min" max.one-time="max" step.one-time="step" value.bind="value"
