--- a/src/resources/tone/tone-filter.html
+++ b/src/resources/tone/tone-filter.html
@@ -1,18 +1,5 @@
 <template>
-  <label for="">Type</label>
-
-  <select id="" value.bind="type">
-    <option repeat.for="type of types" model.bind="type">${type}</option>
-  </select>
-
-  <label for="">Rolloff</label>
-
-  <select id="" value.bind="rolloff">
-    <option repeat.for="value of rolloffs" model.bind="value">${value}</option>
-  </select>
-
-  <label for="">Q</label>
-
-  <mdl-slider id="" min="0" max="1000" step="1" value.two-way="Q"></mdl-slider>
-  <mdl-textfield type="number" min="0" max="1000" step="1" value.two-way="Q" label="Q"></mdl-textfield>
+  <input-select label="Type" options.bind="types" value.bind="type"></input-select>
+  <input-select label="Rolloff" options.bind="rolloffs" value.bind="rolloff"></input-select>
+  <input-range label="Q" min="0.0001" max="1000" step="0.0001" value.bind="Q"></input-range>
 </template>
