--- a/src/shell/nav-bar.html
+++ b/src/shell/nav-bar.html
@@ -1,5 +1,5 @@
-<template bindable="router">
-  <mdl-navigation links.bind="router.navigation">
+<template bindable="links">
+  <mdl-navigation links.bind="links">
     <a class="mdl-navigation__link" href="https://github.com/sccherry/synthia">About</a>
   </mdl-navigation>
 </template>
