--- a/src/resources/elements/piano-roll.html
+++ b/src/resources/elements/piano-roll.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="./piano.css"></require>
+  <require from="./piano-roll.css"></require>
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518 99" class="Piano" mousedown.delegate="onMousedown($event)" mouseup.delegate="onMouseup($event)">
     <rect width="8" height="48" x="0" y="50" class="Piano-key Piano-key--natural" data-midi="21" />
