--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
     </mdl-layout-drawer>
 
     <mdl-layout-content>
-      <tone-mono-synth></tone-mono-synth>
+      <tone-synth></tone-synth>
       <piano-roll></piano-roll>
     </mdl-layout-content>
   </mdl-layout>
