--- a/src/resources/mdl/mdl-slider.html
+++ b/src/resources/mdl/mdl-slider.html
@@ -2,7 +2,5 @@
   <require from="material-design-lite/material.css"></require>
   <require from="./mdl-js"></require>
 
-  <input class="mdl-slider mdl-js-slider" type="range"
-    min.one-time="min" max.one-time="max" step.one-time="step" value.bind="value"
-    mdl-js>
+  <input class="mdl-slider mdl-js-slider" type="range" min.bind="min" max.bind="max" step.bind="step" value.bind="value" mdl-js>
 </template>
