--- a/src/resources/mdl/mdl-textfield.html
+++ b/src/resources/mdl/mdl-textfield.html
@@ -3,7 +3,7 @@
   <require from="./mdl-js"></require>
 
   <div class="mdl-textfield mdl-js-textfield" mdl-js>
-    <input id="" class="mdl-textfield__input" type.one-time="type" min.one-time="min" max.one-time="min" step.one-time="step" value.two-way="value">
+    <input id="" class="mdl-textfield__input" type.bind="type" min.bind="min" max.bind="min" step.bind="step" value.bind="value">
     <label class="mdl-textfield__label" for="">${label}</label>
   </div>
 </template>
