--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <title>Synthia</title>
   <meta name="description" content="A configurable, modular synthesizer.">
 
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body aurelia-app="main">
-  <div class="is-loading">Loading&hellip;</div>
+  <div class="mdl-spnner mdl-js-spinner is-active"></div>
 
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
