--- a/src/resources/mdl/mdl-card.html
+++ b/src/resources/mdl/mdl-card.html
@@ -1,7 +1,7 @@
 <template>
   <require from="material-design-lite/material.css"></require>
 
-  <div class="mdl-card" class.bind="classList">
+  <div class="mdl-card ${classList}">
     <slot></slot>
   </div>
 </template>
