--- a/src/resources/mdl/mdl-cell.html
+++ b/src/resources/mdl/mdl-cell.html
@@ -1,7 +1,7 @@
 <template>
   <require from="material-design-lite/material.css"></require>
 
-  <div class="mdl-cell" class.bind="classList">
+  <div class="mdl-cell ${classList}">
     <slot></slot>
   </div>
 </template>
