--- a/src/resources/mdl/mdl-slider.html
+++ b/src/resources/mdl/mdl-slider.html
@@ -2,5 +2,5 @@
   <require from="material-design-lite/material.css"></require>
   <require from="./mdl-js"></require>
 
-  <input class="mdl-slider mdl-js-slider" type="range" min.bind="min" max.bind="max" step.bind="step" value.bind="value" mdl-js>
+  <input ref="slider" class="mdl-slider mdl-js-slider" type="range" min.bind="min" max.bind="max" step.bind="step" value.bind="value" mdl-js>
 </template>
