--- a/src/resources/mdl/mdl-tooltip.html
+++ b/src/resources/mdl/mdl-tooltip.html
@@ -1,8 +1,7 @@
 <template>
   <require from="material-design-lite/material.css"></require>
 
-  <span class="mdl-layout__title">
+  <span class="mdl-tooltip ${classList}" data-mdl-for.bind="for">
     <slot></slot>
   </span>
-  <div class="mdl-layout-spacer" if.bind="spacer !== null"></div>
 </template>
