--- a/src/app.html
+++ b/src/app.html
@@ -3,17 +3,21 @@
 
   <mdl-layout>
     <mdl-layout-header>
-      <mdl-layout-title>${title}</mdl-layout-title>
+      <mdl-layout-title spacer>${title}</mdl-layout-title>
+      <nav-bar links.bind="links"></nav-bar>
     </mdl-layout-header>
 
     <mdl-layout-drawer>
-      <nav-bar links.bind="links"></nav-bar>
+      <webmidi-access type="inputs" midimessage.delegate="onMidimessage($event)"></webmidi-access>
+      <soundfont type="acoustic_grand_piano" change.delegate="setSoundfont($event)"></soundfont>
     </mdl-layout-drawer>
 
     <mdl-layout-content>
-      <webmidi-access type="inputs" midimessage.delegate="onMidimessage($event)"></webmidi-access>
-      <soundfont type="acoustic_grand_piano" change.delegate="setSoundfont($event)"></soundfont>
-      <piano-roll midimessage.delegate="onMidimessage($event)"></piano-roll>
+      <mdl-grid>
+        <mdl-cell col="12">
+          <piano-roll midimessage.delegate="onMidimessage($event)"></piano-roll>
+        </mdl-cell>
+      </mdl-grid>
     </mdl-layout-content>
   </mdl-layout>
 </template>
