--- a/src/resources/elements/input-range.html
+++ b/src/resources/elements/input-range.html
@@ -1,6 +1,6 @@
 <template>
-  <label for="">${label}</label>
+  <label for.bind="id">${label}</label>
 
-  <mdl-slider id="" min.bind="min" max.bind="max" step.bind="step" value.bind="value"></mdl-slider>
+  <mdl-slider id.bind="id" min.bind="min" max.bind="max" step.bind="step" value.bind="value"></mdl-slider>
   <mdl-textfield type="number" min.bind="min" max.bind="max" step.bind="step" value.bind="value" label.bind="label"></mdl-textfield>
 </template>
