--- a/src/app.html
+++ b/src/app.html
@@ -8,9 +8,18 @@
     </mdl-layout-header>
 
     <mdl-layout-drawer>
-      <webmidi-access type="inputs" midimessage.delegate="onMidimessage($event)"></webmidi-access>
-      <soundfont type="acoustic_grand_piano" change.delegate="setSoundfont($event)"></soundfont>
-      <input-range min="2" max="8" value.bind="octave" change.delegate="setOctave($event)"></input-range>
+      <span class="mdl-layout-title">Settings</span>
+      <mdl-list>
+        <mdl-list-item>
+          <webmidi-access type="inputs" midimessage.delegate="onMidimessage($event)"></webmidi-access>
+        </mdl-list-item>
+        <mdl-list-item>
+          <soundfont type="acoustic_grand_piano" change.delegate="setSoundfont($event)"></soundfont>
+        </mdl-list-item>
+        <mdl-list-item>
+          <input-range min="2" max="8" value.bind="octave" change.delegate="setOctave($event)" label="Octave"></input-range>
+        </mdl-list-item>
+      </mdl-list>
     </mdl-layout-drawer>
 
     <mdl-layout-content>
